--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -2,6 +2,7 @@
 \newcommand{\C}[2]{\ensuremath{\sansC(#1, #2)}}      % \C{a}{b}      for  C(a, b)
 
 \newcommand{\commr}[2]{\ensuremath{\mathrel{[#1, #2]}}} % [r, s] (relation spacing)
+\newcommand{\comm}[2]{\ensuremath{[#1, #2]}} % [r, s] (relation spacing)
 \newcommand{\comr}[1]{\ensuremath{\mathrel{[#1, #1]}}}  % [r, r] (relation spacing)
 \newcommand{\com}[1]{\ensuremath{[#1, #1]}}             % [r, r] (no extra space)
 
