--- a/notes/alt-com.tex
+++ b/notes/alt-com.tex
@@ -256,7 +256,7 @@ A/\alpha \times B/\beta  = \{(a, b)/(\alpha \otimes \beta) \mid a\in A \, \text{
 %% \end{remarks}
 
 \section{Alternate Description of the Commutator}
-\subsection{First Attempt}
+%% \subsection{First Attempt}
 \label{sec:altern-descr}
 For an algebra $\bA$ with congruence relations $\alpha$, $\beta\in \Con\bA$,
 let $\bbeta$ denote the subalgebra of $\bA\times \bA$ with universe 
@@ -298,6 +298,8 @@ as follows:
 where $\Gamma$ is a context containing
 $a \alphar b$, $u_i \betar v_i$ ($1\leq i\leq n$), and 
 $t\in \Pol_{n+1}(\bA)$.
+
+
 
 Where convenient we will resort to denoting pairs, and pairs of pairs, using arrays instead of tuples, and tuples of tuples, etc. That is, 
 \[
@@ -447,7 +449,7 @@ point of $\Psiba$.
 \item
   It is not hard to show that $\Psiba (\theta)$ is reflexive and symmetric
   whenever $\theta$ has these properties; that is, $\Psiba$ maps tolerances
-  to tolerances. (See appendix below.)
+  to tolerances.
   \item 
   Since $\Psiba$ is clearly a monotone increasing function on the (complete) sublattice
   $\downbeta \leq \Tol(A)$, it is guaranteed to have a least fixed
@@ -621,36 +623,47 @@ point of $\Psiba$.
     $(a,a)\in [\alpha, \beta]$, so $(x,y)\in [\alpha, \beta]$, as desired.
 
     We now prove $[\alpha, \beta]\leq \Psiba(0_A)$.
-    Let $(x,y)\in [\alpha, \beta]$. We will prove
-    $(a,a) \Deltabar (x,y)$ for some $a\in A$.
-
-    \bigskip
-
-    \bigskip
-
-    We have thus proved $[\alpha, \beta]$ is a fixed point of $\Psiba$.
-    %% Recall that the lattice order on $\Con \bA$ is complete, so t
-    In other words, 
-    $[\alpha, \beta]$ is ``$\Psiba$-closed.''
-    %% (A set $B\subseteq \beta$ is called \defn{$\Psiba$-closed} provided
-    %% $\Psiba(B) \subseteq B$.)
-
-
-
-    
-    Since $\Psiba$ is
-  monotone increasing, we have
-  $0_A \leq \Psiba(0_A)$.% \leq \Psiba^{2}(0_A) \leq \cdots$.
-  
-
-  Thus, for each $n< \omega$,
-  $\Join_{0\leq k\leq n} \Psiba^{k}(0_A) = \Psiba^{n}(0_A)$ and
-  $\Join_{k\geq 0} \Psiba^{k}(0_A) = \lim_k \Psiba^{k}(0_A)$.
-  Therefore, to prove~(\ref{eq:8}) it suffices to check that
-  $\Psiba^{k}(0_A) \leq [\alpha, \beta]$ for all $k$.
-  We prove this by induction on $k$.
+    Since $[\alpha, \beta]$ is the least congruence $\gamma$
+    satisfying $\CC{\alpha}{\beta}{\gamma}$, it suffices to prove
+    $\CC{\alpha}{\beta}{\Psiba(0_A)}$ holds.
+    Suppose $a \alphar a'$ and $b_i \betar b_i'$ ($(1\leq i \leq k$) and
+    $t^{\bA} \in \Pol_{k+1}(\bA)$ satisfy
+    $t^{\bA}(a, \bb) \mathrel{\Psiba(0_A)} t^{\bA}(a, \bb')$.  
+    We must show $t(a', \bb) \mathrel{\Psiba(0_A)} t(a', \bb')$.  
+    The antecedent $t^{\bA}(a, \bb) \mathrel{\Psiba(0_A)} t^{\bA}(a, \bb')$ is equivalent to
+    the existence of $c \in A$ such that $(c,c) \Deltabar (t^{\bA}(a, \bb), t^{\bA}(a, \bb'))$.
+    Now
+    \[
+    (t^{\bA}(a, \bb), t^{\bA}(a, \bb')) = t^{\bbeta}((a,a),(b_1, b_1'), \dots,(b_k, b_k')),
+    \]
+    and since $a \alphar a'$, we have
+    \[
+    t^{\bbeta}((a,a),(b_1, b_1'), \dots,(b_k, b_k'))
+    \Deltabar
+    t^{\bbeta}((a',a'),(b_1, b_1'), \dots,(b_k, b_k')).
+    \]
+    The latter is equal to $(t^{\bA}(a', \bb), t^{\bA}(a', \bb'))$, and  it follows
+    by transitivity of $\Deltaba$ that
+    $(c,c) \Deltabar (t^{\bA}(a', \bb), t^{\bA}(a', \bb'))$.
+    Therefore, $t(a', \bb) \mathrel{\Psiba(0_A)} t(a', \bb')$, as desired.  
   \end{enumerate}
 \end{proof}
+
+\bibliographystyle{alphaurl}
+\bibliography{alt-refs.bib}
+
+
+
+\end{document}
+
+
+
+
+
+
+
+%% OLD STUFF 
+
 
 \appendix
 \section{Appendix}
