fixed the abstract

--- a/notes/alt-com-short.tex
+++ b/notes/alt-com-short.tex
@@ -152,7 +152,7 @@ MRREVIEWER = {H. Peter Gumm},
 \begin{document}
 
 %% \title[Computing the Commutator Efficiently]{Computing the commutator efficiently}
-\title{Alternative Descriptions of the Commutator}
+\title{Alternative Description of the Commutator}
 \date{\today}
 \author[W.~DeMeo]{William DeMeo}
 \address{University of Hawaii}
@@ -174,11 +174,9 @@ MRREVIEWER = {H. Peter Gumm},
 %% \renewcommand{\bbeta}{\ensuremath{\ubar{\boldsymbol{\beta}}}}
 
 \begin{abstract}
-  The goal of this note is two-fold: first, we attempt to explain 
-  the alternate description of the commutator given by Kearnes
-  in~\cite[p.~930]{MR1358491}; second, we present another
-  description of the commutator that we believe could form
-  the basis of an easy and efficient (polynomial-time) algorithm for computing the commutator.
+  We present another description of the commutator that is inspired by 
+  the description given by Kearnes in~\cite[p.~930]{MR1358491}. We expect this will lead
+  to an easy and efficient (polynomial-time) algorithm for computing the commutator.
   
   %% (here $\beta$ is a congruence of $\bA$ and $\bA \times_\beta \bA$ denotes the subalgebra of
   %% $\bA^2$ with universe $\beta$):
