--- a/IJAC/inputs/refs.bib
+++ b/IJAC/inputs/refs.bib
@@ -16,6 +16,12 @@ MRREVIEWER = {Radim B{\v{e}}lohl{\'a}vek},
        DOI = {10.1016/S0304-3975(01)00009-3},
        URL = {http://dx.doi.org/10.1016/S0304-3975(01)00009-3},
 }
+@unpublished{com-fix-poi,
+  author    = {William DeMeo},
+  title     = {The Commutator as Fixed Point of a Closure Operator},
+  year      = {2017},
+  note = {Unpublished seminar notes}
+}
 @article {MR1695293,
     AUTHOR = {Bergman, Clifford and Juedes, David and Slutzki, Giora},
      TITLE = {Computational complexity of term-equivalence},
