--- a/IJAC/inputs/macros.sty
+++ b/IJAC/inputs/macros.sty
@@ -10,6 +10,7 @@
 % \newcommand{\Com}[1]{\ensuremath{\lb #1 \rb}}            % [[r]] (no extra space)
 \newcommand{\Comr}[1]{\ensuremath{\mathrel{[#1]}}} % [[r]] (relation spacing)
 \newcommand{\Com}[1]{\ensuremath{[#1]}}            % [[r]] (no extra space)
+\newcommand\mytimes{\ensuremath{\ast}}
 
 
 \newcommand{\etaR}{\ensuremath{\tilde{\eta}}}
